--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -115,7 +114,7 @@
 
     <div class="config">
         <h3>Current Configuration:</h3>
-        <p>Ollama URL: <code id="ollamaUrl">http://localhost:11434</code></p>
+        <p>Ollama URL: <code id="ollamaUrl">http://127.0.0.1:11434</code></p>
         <p>Ollama Model: <code id="ollamaModel">llama2</code></p>
     </div>
 
@@ -141,7 +140,7 @@
 
         async function makeApiCall(messages, maxTokens, isFinalAnswer = false) {
             try {
-                const response = await fetch(`https://cors-anywhere.herokuapp.com/${document.getElementById('ollamaUrl').textContent}/api/chat`, {
+                const response = await fetch(`http://127.0.0.1:11434/api/chat`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
